# testing.nix.bundle

./: Cargo.nix  Cargo.toml  _flake.nix  crate-hashes.json  flake.nix  flake2.nix  package.nix
.github/workflows/: ci.yml  release.yml
nix/: package.nix
nix/rust-overlay/: flake-module.nix
src/: main.rs
