[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
# git2 = "0.11.0"
blas-src = { version = "0.14.0", features = ['openblas'] }
ndarray = { version = "0.16", features = ['blas'] }
openblas-src = { version = "0.10.15", default-features = false, features = [
  'cblas',
  'system',
] }
# 
# 
# ort = { version = "=2.0.0-rc.9", default-features = false, features = [
#   "ndarray",
#   "half",
#   "load-dynamic",
#   "cuda",
# ] }
# ort-sys = "=2.0.0-rc.9"
